# toy-agent

./: .gitignore  README.md  agent.py  example.py  example_decorator.py  llm_client.py  pyproject.toml  test_gemini_3_pro.py  test_simple.py  tool_registry.py  tools.py
examples/: example.py  example_apply_patch.py  run_example.py  test_apply_patch.py  test_gemini_3_pro.py  test_simple.py
toy_agent/: __init__.py  agent.py  llm_client.py  tool_registry.py
toy_agent/tools/: __init__.py  apply_patch.py  calculator.py  file_ops.py  search.py  weather.py
